--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = potted_farming
-depends = default,
+depends = default
 optional_depends = flowers, bonemeal, herbs
 author = Annalysa
 version = 1.0
