Mushrooms and FruitTrees added, mechanics improved
This needs further improvements, but i think that it is a good start. Needs good indentation too.

--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = potted_farming
-depends = default,
-optional_depends = flowers, bonemeal, herbs
+depends = default, dye
+optional_depends = flowers, herbs, ethereal, homedecor
 author = Annalysa
-version = 1.0
+version = 3.0
