Added sage, only one shrub, need fixes still
Only one shrub exists now in nodes.lua, as there is no need for multiple of the same node to exist.
Deleted mushroom spore also, one mushroom is needed instead.
check_light needs improvements.

--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = potted_farming
 depends = default, dye
-optional_depends = flowers, herbs, ethereal, homedecor
+optional_depends = flowers, herbs, ethereal, homedecor, bonemeal
 author = Annalysa
 version = 3.0
