Added settings, updated traslations, fixed little.
Added French and Spanish translations, updated the Italian and Dutch.

--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = potted_farming
 depends = default, dye
-optional_depends = flowers, herbs, ethereal, homedecor, bonemeal
+optional_depends = flowers, herbs, ethereal, homedecor,
 author = Annalysa
-version = 3.0
+version = 3.5
