get_modpath correct checking, more settings
solved the get_modpath issue on items.lua, followed some advices by clyde

--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = potted_farming
 depends = default, dye
-optional_depends = flowers, herbs, ethereal, homedecor,
+optional_depends = flowers, herbs, cucina_vegana, ethereal, homedecor, cooltrees, moretrees
 author = Annalysa
 version = 4.0
