Fixes, added more trees, more plants, screenshots

--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = potted_farming
 depends = default, dye
-optional_depends = flowers, herbs, cucina_vegana, ethereal, homedecor, cooltrees, moretrees
+optional_depends = farming, flowers, herbs, cucina_vegana, ethereal, homedecor, cool_trees, moretrees
 author = Annalysa
-version = 4.0
+version = 4.2
